Converting Labelled TextInput and Select to Flex compoennts to fix layout issue

--- a/src/styles/stylesheet.css
+++ b/src/styles/stylesheet.css
@@ -88,8 +88,8 @@ h6{
   position: relative;
 }
 
-.tabs.tabs75{
-  height: 75vh;
+.tabs.tabs80{
+  height: 80vh;
 }
 
 #progressBar{
